# bitplanes

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README  README-iOS  README.md  bitplanes_config.h.in  build_ios.sh  run_bench  test_shit.sh
cmake/: CheckC++11.cmake  ConfigureSSE.cmake  FindSSE.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake  OptimizeForArchitecture.cmake  SetCompilerOptions.cmake  iOS.cmake
config/: auv.cfg  slomo.cfg  sparse.cfg  test.cfg  vstab.cfg
core/: CMakeLists.txt  affine.cc  affine.h  algorithm_parameters.cc  algorithm_parameters.h  bitplanes_tracker.cc  bitplanes_tracker.h  bitplanes_tracker_pyramid.cc  bitplanes_tracker_pyramid.h  bitplanes_tracker_sparse.h  bpmath.h  config.h  debug.h  feature_based.cc  feature_based.h  homography.cc  homography.h  intensity_tracker.h  motion_model.h  motion_model_traits.h  ransac.h  ransac_model.cc  ransac_model.h  tracker.cc  tracker.h  tracker_dense.cc  tracker_dense.h  translation.cc  translation.h  types.cc  types.h  viz.cc  viz.h
core/internal/: SSE2NEON.h  SmallVector.h  bitplanes_channel_data.cc  bitplanes_channel_data.h  bitplanes_channel_data2.cc  bitplanes_channel_data2.h  bitplanes_channel_data_base.h  bitplanes_channel_data_fast.cc  bitplanes_channel_data_fast.h  bitplanes_channel_data_packed.cc  bitplanes_channel_data_packed.h  bitplanes_channel_data_packed2.cc  bitplanes_channel_data_packed2.h  bitplanes_channel_data_subsampled.cc  bitplanes_channel_data_subsampled.h  bitplanes_channel_subsampled.cc  bitplanes_channel_subsampled.h  bitplanes_sparse_data.cc  bitplanes_sparse_data.h  census.cc  census.h  census_signature.h  channel_data.cc  channel_data.h  channel_data_dense.cc  channel_data_dense.h  channel_extractor.h  ct.cc  ct.h  cvfwd.h  fit_homography.h  gmag.cc  gmag.h  ic.cc  ic.h  imsmooth.cc  imsmooth.h  imwarp.cc  imwarp.h  intrin.h  (+16 more)
demo/: CMakeLists.txt  gui_live_camera.cc  gui_live_camera.h  main.cc  viewer.cc  viewer.h
demo_cv/: CMakeLists.txt  bounded_buffer.h  demo.cc  demo.h  main.cc
ios/: BitPlanes.h  BitPlanes.mm
matlab/: p2h.m  sl3_hat.m  sl3_vee.m  sym_jacobian.m
test/: CMakeLists.txt  slomo_data_loader.cc  slomo_data_loader.h  test_alg_params.cc  test_auv.cc  test_bp_channel_data.cc  test_bp_channel_data2.cc  test_bp_cost.cc  test_bp_tracker.cc  test_cdata.cc  test_cdata_dense.cc  test_ct.cc  test_dense_slomo.cc  test_fit_homography.cc  test_fit_homography_cv.cc  test_gui.cc  test_homography.cc  test_imwarp.cc  test_init.cc  test_intensity_tracker.cc  test_linearize.cc  test_live.cc  test_lk_translation.cc  test_map.cc  test_pyramid.cc  test_pyramid_features.cc  test_ranac.cc  test_ransac.cc  test_roi.cc  test_set_template.cc  test_slomo_loader.cc  test_slowmo.cc  test_sparse.cc  test_sparse_slomo.cc  test_stuff.cc  test_track.cc  test_track_1.cc
utils/: CMakeLists.txt  config_file.cc  config_file.h  error.h  fs.cc  fs.h  icompare.cc  icompare.h  memory.cc  memory.h  str2num.cc  str2num.h  timer.cc  timer.h  utils.cc  utils.h
